--- a/style/janemunk/scss/parts/_exhibition.scss
+++ b/style/janemunk/scss/parts/_exhibition.scss
@@ -7,6 +7,7 @@
     -webkit-user-select: none;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     font-family: 'Raleway';
+    overflow: hidden;
 
     &-concrete {
       background-image: url('../gfx/exhibition/background_concrete.jpg');
